--- a/yboga/templates/base_head.html
+++ b/yboga/templates/base_head.html
@@ -7,5 +7,5 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>АмНяМ</title>
+    <title>{{project_name}}</title>
 </head>
