--- a/yboga/templates/header_menu.html
+++ b/yboga/templates/header_menu.html
@@ -14,7 +14,7 @@
                             class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Главная</a>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Главная</a>
                             </li>
                         </ul>
                         <div class="d-flex">
@@ -28,7 +28,7 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        Здравствуйте пользователь
+                                        info
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <li><a class="dropdown-item" href="#!">Моя страница</a></li>
