--- a/yboga/templates/index.html
+++ b/yboga/templates/index.html
@@ -1,15 +1,15 @@
-{% include "blog/base_head.html" %}
+{% include "base_head.html" %}
 
-{% include "blog/header_menu.html" %}
+{% include "header_menu.html" %}
 
 <!-- Main body-->
 <main>
-    <h2>Кулинарный портал</h2>
+    <h2>{{project_name}}</h2>
     <div class="d-flex justify-content-between">
         <div class="col-3">
             <!-- Sidebar-->
             <div class="list-group">
-                <a href="#!" class="list-group-item list-group-item-action">Первая кнопка</a>
+                <a href="categories" class="list-group-item list-group-item-action">Категории</a>
                 <a href="#!" class="list-group-item list-group-item-action">Вторая кнопка</a>
                 <a href="#!" class="list-group-item list-group-item-action">Третья кнопка</a>
                 <a href="#!" class="list-group-item list-group-item-action">Четвертая кнопка</a>
@@ -20,21 +20,19 @@
         <!-- Posts-->
         <div class="col-8">
             <!-- Post-->
-             {% for post in posts %}
-                <div class="card text-center">
-                    <div class="card-header">{{post.category}}</div>
-                    <div class="card-body"><h5 class="card-title"> {{post.title}}</h5>
-                        <p class="card-text">{{post.content|truncatechars:100}}</p>
-                        <a href="#!" class="btn btn-primary">Перейти куда
-                            нибудь</a></div>
-                    <div class="card-footer text-muted">{{post.created_at}}</div>
-                </div>
-            {% endfor %}
+            {% for post in posts %}
+            <div class="card text-center">
+                <div class="card-header">{{post.category}}</div>
+                <div class="card-body"><h5 class="card-title"> {{post.title}}</h5>
+                    <p class="card-text">{{post.content|truncatechars:100}}</p>
+                    <a href="#!" class="btn btn-primary">Перейти куда
+                        нибудь</a></div>
+                <div class="card-footer text-muted">{{post.created_at}}</div>
             </div>
+            {% endfor %}
         </div>
     </div>
 </main>
 
 
-
-{% include "blog/footer_base.html" %}
+{% include "footer_base.html" %}
