--- a/yboga/templates/base_head.html
+++ b/yboga/templates/base_head.html
@@ -8,4 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>{{project_name}}</title>
+    <link rel="icon" href="/media/static/img/logo_clear.png" type="image/x-icon">
+
 </head>
