--- a/yboga/templates/header_menu.html
+++ b/yboga/templates/header_menu.html
@@ -1,48 +1,62 @@
 <body>
 <div class="container">
     <header>
-        <div class="container">
-            <!--   Header-->
-            <nav class="navbar navbar-expand-lg bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#!">
-                        <img src="#!" width="75" alt="">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Переключатель навигации"><span
-                            class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Главная</a>
-                            </li>
-                        </ul>
-                        <div class="d-flex">
-                            <form class="d-flex" role="search" method="get" action="#!">
-                                <input name="q" class="form-control me-2" type="search" placeholder="Поиск"
-                                       aria-label="Поиск">
-                                <button class="btn btn-outline-success" type="submit">Поиск</button>
-                            </form>
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <!--  Users-->
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                       data-bs-toggle="dropdown" aria-expanded="false">
-                                        info
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="#!">Моя страница</a></li>
-                                        <li><a class="dropdown-item" href="#!">Добавить статью</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#!">Выход</a></li>
-                                    </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm rounded">
+            <div class="container-fluid">
+                <!-- Логотип и название -->
+                <a class="navbar-brand d-flex align-items-center" href="/">
+                    <img src="/media/static/img/logo_clear.png" alt="Логотип" width="70" height="70" class="me-2">
+                    <span class="fw-bold">{{ project_name }}</span>
+                </a>
+
+                <!-- Кнопка для мобилки -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarContent" aria-controls="navbarContent"
+                        aria-expanded="false" aria-label="Переключатель навигации">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- Меню -->
+                <div class="collapse navbar-collapse" id="navbarContent">
+                    <!--                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
+                    <!--                        <li class="nav-item">-->
+                    <!--                            <a class="nav-link active" href="/">Главная</a>-->
+                    <!--                        </li>-->
+                    <!--                        <li class="nav-item">-->
+                    <!--                            <a class="nav-link" href="/categories">Категории</a>-->
+                    <!--                        </li>-->
+                    <!--                        <li class="nav-item">-->
+                    <!--                            <a class="nav-link" href="/about">О проекте</a>-->
+                    <!--                        </li>-->
+                    <!--                    </ul>-->
+                    {% include "navbar_menu.html" %}
+
+                    <!-- Поиск -->
+                    <form class="d-flex me-3" role="search" method="get" action="/search/">
+                        <input name="q" class="form-control me-2" type="search" placeholder="Поиск игр..."
+                               aria-label="Поиск">
+                        <button class="btn btn-outline-primary" type="submit">Поиск</button>
+                    </form>
+
+                    <!-- Профиль пользователя -->
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="userMenu" role="button"
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-person-circle"></i> info
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+                                <li><a class="dropdown-item" href="/profile/">Моя страница</a></li>
+                                <li><a class="dropdown-item" href="/articles/add/">Добавить статью</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
                                 </li>
+                                <li><a class="dropdown-item" href="/logout/">Выход</a></li>
                             </ul>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
     </header>
+</div>
