--- a/yboga/templates/navbar_menu.html
+++ b/yboga/templates/navbar_menu.html
@@ -1,7 +1,9 @@
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     {% for item in main_menu %}
     <li class="nav-item">
-        <a class="nav-link d-flex align-items-center {% if request.path == item.url %}active fw-bold text-primary{% endif %}"
+        <!--        <a class="nav-link d-flex align-items-center {% if request.path == item.url %}active fw-bold text-primary{% endif %}"-->
+        <!--           href="{{ item.url }}">-->
+        <a class="nav-link d-flex align-items-center {% if request.path == item.url %}active fw-bold{% endif %}"
            href="{{ item.url }}">
             <i class="bi {{ item.icon }} me-2"></i> {{ item.title }}
         </a>
