--- a/yboga/templates/categories.html
+++ b/yboga/templates/categories.html
@@ -1,5 +1,7 @@
-{% include "base_head.html" %}
-{% include "header_menu.html" %}
+{% extends 'base.html' %}
+
+{% block main %}
+
 
 <main class="container mt-4 mb-5">
 
@@ -36,18 +38,4 @@
         {% endfor %}
     </div>
 
-</main>
-
-{% include "footer_base.html" %}
-
-<style>
-    /* Hover эффект для карточек */
-    .hover-shadow:hover {
-        transform: scale(1.015);
-        box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
-    }
-
-    .transition {
-        transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-    }
-</style>
+{% endblock main %}
