--- a/yboga/templates/components/_head.html
+++ b/yboga/templates/components/_head.html
@@ -1,7 +1,6 @@
-{% load static %}
-<!doctype html>
-<html lang="ru" data-bs-theme="light">
 <head>
+    {% load static %}
+
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -11,6 +10,6 @@
     <link href="{% static 'css/categories.css' %}" rel="stylesheet">
     <link href="{% static 'css/theme.css' %}" rel="stylesheet">
 
-    <title>{{project_name}}</title>
+    <title>{{ title }} | {{project_name}}</title>
     <link rel="icon" href="/media/static/img/logo_clear.png" type="image/x-icon">
 </head>
