--- a/yboga/templates/components/_header.html
+++ b/yboga/templates/components/_header.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse flex-grow-1" id="navbarContent">
 
                     <!-- Меню -->
-                    {% include "navbar_menu.html" %}
+                    {% include "components/_navbar_menu.html" %}
 
                     <!-- Поиск -->
                     <form class="d-flex me-3 mb-2 mb-lg-0" role="search" method="get" action="/search/">
